[package]
name = "rtt-debug-tool-mcu"
version = "0.2.2"
edition = "2024"
license = "MIT"
authors = ["XieFField <3432674139@qq.com>"]
description = "RTT Debug Tool - MCU调试工具库,配合RTT_DebugTool主机端使用"
metadata.wix.help_url = "https://github.com/XieFField/RTT_DebugTool"
repository = "https://github.com/XieFField/RTT_DebugTool"
documentation = "https://github.com/XieFField/RTT_DebugTool"
homepage = "https://github.com/XieFField/RTT_DebugTool"
[dependencies]

heapless = "0.9"
critical-section = "1.2"
embassy-time = "0.5"
rtt-target = "0.6"
# rtt-debug-tool-mcu-derive = { path = "../rtt-debug-tool-mcu-derive" }
rtt-debug-tool-mcu-derive = "0.1.0"
embassy-executor = { version = "0.9", features = ["executor-thread"] }
embassy-futures = "0.1"
embedded-hal-nb = "1"
nb = "1"

# embassy-stm32 = {version = "0.6.0", default-features = false, features = ["unstable-pac"] }
# [features]
# default = []

# _dual-core = []
# _core-cm7  = []
# _core-cm4  = []
# _core-cm0p = []

# stm32f103c8 = ["embassy-stm32/stm32f103c8"]
# stm32h723zg = ["embassy-stm32/stm32h723zg"]

embassy-stm32 = { version = "0.6.0", default-features = false, features = ["unstable-pac"] }
# 注意：没有启用任何 stm32xxxx 特性

[features]
default = []
dev-chip = ["embassy-stm32/stm32h723zg"]