[package]
name = "rtt_debug_tool"
version = "0.2.0"
edition = "2024"
build = "build.rs"
authors = ["XieFField <3432674139@qq.com>"]
description = "RTT Debug Tool - MCU调试工具" 
license = "MIT"  
metadata.wix.eula = false  
metadata.wix.help_url = "https://github.com/XieFField/RTT_DebugTool"  
[dependencies]
# 调试器驱动
probe-rs = "0.27"

# 异步 + 线程
tokio = { version = "1", features = ["full"] }

# GUI
eframe = "0.31"
egui = "0.31"

# CLI
clap = { version = "4", features = ["derive"] }

# 串口
serialport = "4"

# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
winres = "0.1"
